--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane alignment="center" hgap="10" prefHeight="347.0" prefWidth="534.0" vgap="10" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<GridPane alignment="center" hgap="10" prefHeight="347.0" prefWidth="534.0" vgap="10" xmlns="http://javafx.com/javafx/8.0.151" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
    <children>
       <AnchorPane prefHeight="347.0" prefWidth="562.0">
          <children>
@@ -26,13 +26,16 @@
             <Button fx:id="extraerBtn" layoutX="14.0" layoutY="196.0" mnemonicParsing="false" text="Extraer" />
             <Button fx:id="tamanoBtn" layoutX="89.0" layoutY="196.0" mnemonicParsing="false" text="Tamaño" />
             <Button fx:id="vaciarBtn" layoutX="175.0" layoutY="196.0" mnemonicParsing="false" text="Vaciar" />
-            <ListView fx:id="elementosLV" layoutX="286.0" layoutY="92.0" orientation="HORIZONTAL" prefHeight="234.0" prefWidth="200.0" />
+            <ListView fx:id="elementosLV" layoutX="264.0" layoutY="92.0" orientation="HORIZONTAL" prefHeight="234.0" prefWidth="259.0" />
             <Label layoutX="336.0" layoutY="54.0" text="Elementos">
                <font>
                   <Font name="System Bold" size="20.0" />
                </font>
             </Label>
-            <Label fx:id="textoLbl" layoutX="14.0" layoutY="263.0" prefHeight="64.0" prefWidth="214.0" />
+            <Label fx:id="textoLbl" layoutX="14.0" layoutY="263.0" prefHeight="64.0" prefWidth="239.0">
+               <font>
+                  <Font size="20.0" />
+               </font></Label>
          </children>
       </AnchorPane>
    </children>
